<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmarDatos"
    android:orientation="vertical"
    android:paddingTop="@dimen/margen_activity"
    android:paddingLeft="@dimen/margen_activity"
    android:paddingRight="@dimen/margen_activity"
    android:paddingBottom="@dimen/margen_activity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/titulo_confirmar"
        android:text="@string/confirmar"
        android:textAlignment="center"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pnombre"
        android:layout_below="@id/tvTitulo"
        android:textSize="@dimen/datos"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pfecha"
        android:layout_below="@id/tvNombre"
        android:textSize="@dimen/datos"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ptelefono"
        android:layout_below="@id/tvFecha"
        android:textSize="@dimen/datos"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pemail"
        android:layout_below="@id/tvTelefono"
        android:textSize="@dimen/datos"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pdescripcion"
        android:layout_below="@id/tvEmail"
        android:textSize="@dimen/datos"
        android:layout_marginTop="15dp"
        />

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_editar"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="45dp"
        android:layout_below="@id/tvDescripcion"
        android:backgroundTint="#1C5C04"
        />




</LinearLayout>