<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:paddingTop="@dimen/margen_activity"
    android:paddingLeft="@dimen/margen_activity"
    android:paddingRight="@dimen/margen_activity"
    android:paddingBottom="@dimen/margen_activity"
    android:orientation="vertical">



    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:inputType="textUri"
        tools:ignore="MissingConstraints" />



    <EditText
        android:id="@+id/etFecha"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:clickable="true"
        android:hint="@string/fecha"
        android:layout_below="@id/etNombre"
        />

    <DatePicker
        android:id="@+id/dpFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:headerBackground="@color/acento"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:layout_below="@id/etFecha"
        />
    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_aceptar"
        android:layout_below="@id/dpFecha"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefono"
        android:inputType="textUri"
        android:layout_below="@id/btnAceptar"
        tools:ignore="MissingConstraints" />
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textUri"
        android:layout_below="@id/etTelefono"
        tools:ignore="MissingConstraints" />
    <EditText
        android:id="@+id/etDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Descripcion_contacto"
        android:inputType="textUri"
        android:layout_below="@id/etEmail"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/siguiente"
        android:layout_below="@id/etDescripcion"
        android:backgroundTint="@color/acento"
        />

</LinearLayout>